[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/RocketLauncher/RocketLauncher.gd" type="Script" id=1]

[sub_resource type="CylinderMesh" id=1]
top_radius = 0.1
bottom_radius = 0.1
height = 1.0
radial_segments = 6

[node name="RocketLauncher" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 2.42304e-09, -0.0257121 )
mesh = SubResource( 1 )
material/0 = null

[node name="barrel_end" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00122446, -0.00352052, -0.937873 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="shoot" from="." to="." method="_on_Gun_shoot"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
